static/sass/_submasters.sass
#Submasters
    overflow-y: auto

.submaster
    margin-top: 1.4em
    margin-left: 0.5em

.sliders
    height: 68vh

.slider
    height: 65vh
    margin-left: 35%

#addSubBtn
    margin-top: 75%

.modal
    display: none
    position: fixed
    z-index: 1
    left: 0
    top: 0
    width: 100%
    height: 100%
    overflow: auto
    background-color: rgb(0, 0, 0)
    background-color: rgba(0, 0, 0, 0.4)


.modal-content
    background-color: $bg-light-color
    margin: 7% auto
    padding: 1em
    width: 90%

.user-modal-close, .sub-modal-close
    color: $text-color
    float: right
    font-size: 1.5em
    font-weight: bold
    &:hover, &:focus
        color: $text-dark-color
        text-decoration: none
        cursor: pointer

.noUi-handle, .noUi-target, .noUi-connect
    border-radius: 0px
    border: none
    box-shadow: none
    cursor: pointer
    outline: none

.noUi-handle
    background: $green-color

.noUi-target
    background: $text-color

.noUi-connect
    background: $active-text-color

.sub-chan-settings
    padding-left: 0.75em

#grandmaster
    width: 98%

